src/snapshots/roco_rs__scheduler__tests__can_prepare_command_[shell].snap
---
source: src/scheduler.rs
expression: prepare_command
---
JobDescription {
    command: "echo roco",
    output: STDOUT,
    environment: Test,
}
