src/snapshots/roco_rs__scheduler__tests__can_prepare_command_[task].snap
---
source: src/scheduler.rs
expression: prepare_command
---
JobDescription {
    command: "[BIN_PATH] task foo ROCO_ENV:test SCHEDULER:true",
    output: STDOUT,
    environment: Test,
}
